--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 <!-- /* --------- Header --------- */ -->
-<header class="main_h">
+<header class="main_h sticky open-nav">
 
     <div class="container-fluid">
         <a class="logo" href="#">Brand</a>
@@ -67,7 +67,7 @@
     <div class="card-grid">
         <!-- / Imagenes / -->
 
-        <div><h1 class="sec01">North</h1></div>
+        <h1 class="sec01">North</h1>
 
         <a class="card" href="#">
             <div class="card__background" style="background-image: url(imgs/5.jpg)"></div>
@@ -93,7 +93,7 @@
             </div>
           </a>
 
-          <!-- <a class="card" href="#">
+          <a class="card" href="#">
             <div class="card__background" style="background-image: url(imgs/4.jpeg)"></div>
             <div class="card__content">
               <p class="card__category">Argentina Foods</p>
@@ -101,17 +101,7 @@
             </div>
           </a>
 
-          <a class="card" href="#">
-            <div class="card__background" style="background-image: url(imgs/15.jpeg)"></div>
-            <div class="card__content">
-              <p class="card__category">North</p>
-              <h3 class="card__heading">Cataratas</h3>
-            </div>
-          </a> -->
-
-          <div>
           <h1 class="sec02">Center</h1>
-          </div>
 
           <a class="card" href="#">
             <div class="card__background" style="background-image: url(imgs/6.jpeg)"></div>
@@ -134,6 +124,14 @@
             <div class="card__content">
               <p class="card__category">Center</p>
               <h3 class="card__heading">Bariloche</h3>
+            </div>
+          </a>
+
+          <a class="card" href="#">
+            <div class="card__background" style="background-image: url(imgs/15.jpeg)"></div>
+            <div class="card__content">
+              <p class="card__category">Center</p>
+              <h3 class="card__heading">Cataratas</h3>
             </div>
           </a>
  
@@ -164,13 +162,13 @@
             </div>
           </a>
           
-          <!-- <a class="card" href="#">
+          <a class="card" href="#">
             <div class="card__background" style="background-image: url(imgs/2.jpg)"></div>
             <div class="card__content">
               <p class="card__category">Gauchos</p>
               <h3 class="card__heading">Campo Argentino</h3>
             </div>
-          </a> -->
+          </a>
 
           <h1 class="sec04">Capital Federal</h1>
 
@@ -190,13 +188,13 @@
             </div>
           </a>
 
-          <!-- <a class="card" href="#">
+          <a class="card" href="#">
             <div class="card__background" style="background-image: url(imgs/9.png)"></div>
             <div class="card__content">
               <p class="card__category">Tango</p>
               <h3 class="card__heading">Bandoneon</h3>
             </div>
-          </a> -->
+          </a>
 
           <a class="card" href="#">
             <div class="card__background" style="background-image: url(imgs/11.jpeg)"></div>
@@ -231,7 +229,7 @@
     
     </div>
 
-<!-- Bton arriba -->    
+<!-- Bton arriba     -->
 <button onclick="topFunction()" id="myBtn" title="Arriba" style="display: none; font-size: 30px;"><i class="fa-solid fa-circle-arrow-up"></i></button>
 <script src="https://www.turismodebolsillo.com.ar/js/public/backtotop.js"></script>
 
