--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 </div>
 
 <!-- /* --------- Galery --------- */ -->
-<section class="hero-section">
+<div class="hero-section">
     <div class="card-grid">
         <!-- / Imagenes / -->
 
@@ -205,7 +205,7 @@
           </a>
          
     </div>
-</section>
+  </div>
 
 
 <!-- /* --------- Footer --------- */ -->
