--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 <body>
 <!-- /* --------- Header --------- */ -->
-<header class="main_h sticky open-nav">
+<header class="main_h">
 
     <div class="container-fluid">
         <a class="logo" href="#">Brand</a>
